<resources>
    <string name="app_name">Exercise 1</string>
    <string name="newtask_savetask">Save task</string>
    <string name="text_main_titleLabel">Enter task title:</string>
    <string name="text_tasktitle_hint">Finish homework</string>
    <string name="text_main_summarylabel">Enter task summary:</string>
    <string name="text_tasksummary_hint">Do OSC homework, all of the exercises</string>
    <string name="text_main_importanceLabel">Enter task importance:</string>
    <string name="text_taskimportance_hint">1</string>
    <string name="text_scrollview_notasks">No tasks to show</string>
</resources>
