<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/textview_newtask_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textsize_normal"
        android:text="@string/text_main_titleLabel"/>
    <EditText
        android:id="@+id/edittext_newtask_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_newtask_title"
        android:textColor="@color/color_edittext"
        android:textColorHint="@color/color_hint"
        android:background="@color/color_background"
        android:gravity="center"
        android:inputType="text"
        android:hint="@string/text_tasktitle_hint"/>
    <TextView
        android:id="@+id/textview_newtask_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_newtask_title"
        android:textSize="@dimen/textsize_normal"
        android:text="@string/text_main_summarylabel"/>
    <EditText
        android:id="@+id/edittext_newtask_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_newtask_summary"
        android:textColor="@color/color_edittext"
        android:textColorHint="@color/color_hint"
        android:background="@color/color_background"
        android:gravity="center"
        android:inputType="text"
        android:hint="@string/text_tasksummary_hint"/>
    <TextView
        android:id="@+id/textview_newtask_importance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_newtask_summary"
        android:textSize="@dimen/textsize_normal"
        android:text="@string/text_main_importanceLabel"/>
    <EditText
        android:id="@+id/edittext_newtask_importance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_newtask_importance"
        android:textColor="@color/color_edittext"
        android:textColorHint="@color/color_hint"
        android:background="@color/color_background"
        android:gravity="center"
        android:inputType="number"
        android:hint="@string/text_taskimportance_hint"/>
    <Button
        android:id="@+id/button_newtask_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_newtask_importance"
        android:layout_centerHorizontal="true"
        android:text="@string/newtask_savetask"
        android:textAllCaps="false"
        android:onClick="storeTask"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/marginsize_top"
        android:layout_below="@id/button_newtask_save">
        <TextView
            android:id="@+id/textview_newtask_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_scrollview_notasks"/>
    </ScrollView>
</RelativeLayout>